@@ -1,5 +1,10 @@
 2009-02-10  Jeffrey Stedfast  <fejj@novell.com>
 
+	* minizip/unzip.c (unzlocal_DosDateToTmuDate): Fix ambiguous
+	else's.
+	(unzlocal_DosDateToTmuDate): Here too.
+	(unzlocal_CheckCurrentFileCoherencyHeader): And here.
+
 	* old-map.c: Added prototypes to silence compile warnings. Looks
 	like this file is supposed to be autogenerated, so probably not
 	the right fix but I can't find the autogen script.
